# fused-attention

./: CMakeLists.txt  README.md  setup.py
cuda_fused_attention/: fused_attn.cuh  fused_attn_extention.cu  test.cu
include/: fused_attn.cuh
src/: fused_attn_extention.cu
tests/: benchmark_fused_attn.py  naive_implementation.py  test_fused_attn.py
